--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "podcast-analytics",
   "main": "index.js",
   "dependencies": {
+    "angular-ui-router": "^0.2.18",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "kerberos": "0.0.19",
@@ -12,11 +13,13 @@
   "devDependencies": {
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "raw-loader": "^0.5.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_PATH=$NODE_PATH:./src node server",
+    "dev": "npm start & webpack-dev-server --progress --colors"
   },
   "repository": {
     "type": "git",
